--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 
-<img src="/8e2b2fb6c8db8e137ae6ece30f9763.png" alt="" width="100%">
+<img src="./8e2b2fb6c8db8e137ae6ece30f9763.png" alt="" width="100%">
 
 
 <p class="display-1 text-center fw-bold">Health is wealth</p>
